@@ -3,7 +3,7 @@
 
 #define REV "1.2"
 
-enum { F_NODELIST, F_POINTS24 };
+enum { F_NODELIST, F_POINTS24, F_POINTS4D };
 
 int ul_compile (FILE *fin, FILE *fout, int type, int defzone);
 int ul_sort    (FILE *);
